Revert "feat: cut off streaming and video chat features from master branch"
This reverts commit 09d980bb837879120b0c8e2a7c0fdb77cc7a2d8a.
